# tf-fullstack-template

./: .gitignore  Makefile  README.md  api_key.sh  build_deploy_all.sh  clean_all.sh  provision_infra.sh  setup_all.sh
api_specification/: openapi.json  package-lock.json  package.json
e2e/: pyproject.toml
e2e/tests/: conftest.py  test_pet_flow.py
handlers/: build.sh  clean.sh  lambda_node.mk  lambda_python.mk  lambda_ts.mk
handlers/get_questions/: pyproject.toml
handlers/get_questions/src/: main.py
handlers/get_tags/: pyproject.toml
handlers/get_tags/src/: main.py
handlers/hello/: index.js  package-lock.json  package.json
handlers/hello/hello/: index.js
handlers/hello/hello 2/: index.js  package-lock.json
handlers/pet/create/: pyproject.toml
handlers/pet/create/src/: main.py
handlers/pet/delete/: .gitignore  pyproject.toml
handlers/pet/delete/src/: main.py
handlers/pet/get/: pyproject.toml
handlers/pet/get/src/: main.py
handlers/pet/index/: pyproject.toml
handlers/pet/index/src/: main.py
handlers/pet/listener/: pyproject.toml
handlers/pet/update/: package-lock.json  pyproject.toml
handlers/pet/update/src/: main.py
handlers/post_questions/: pyproject.toml
handlers/post_questions/src/: ingest.py  main.py
libs/examon_mongo/: pyproject.toml
libs/examon_mongo/examon_mongo/documents/: metrics.py  question.py
libs/examon_mongo/examon_mongo/models/: metrics.py  question.py
libs/petshop_support/: pyproject.toml
libs/petshop_support/petshop_support/: logger_factory.py  petshop_support.py  uuid_logger.py
scripts/: pyproject.toml
scripts/scripts/: main.py
terraform/: deploy.sh  tf_clean.sh
terraform/api_domain/: provider.tf  variables.tf
terraform/domain/: data.tf  main.tf  variables.tf
terraform/lambdas/: get_hello.tf  get_questions.tf  get_tags.tf  main.tf  provider.tf
terraform/rest_open_api/: data.tf  main.tf  permissions.tf  provider.tf  variables.tf
terraform/sandbox/: main.tf
terraform/site/: api_gateway.tf  dynamodb.tf  event_source_mapping.tf  lambdas.tf  outputs.tf  permissions.tf  plan.out  static_sites.tf  variables.tf
