[tool.poetry]
name = "e2e"
version = "0.1.0"
description = ""
authors = ["Jarrod Folino <jarrod.folino@fundingcircle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^6.2.5"
requests = "^2.31.0"
boto3 = "^1.33.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["dynamodb", "api_gateway"]