[tool.poetry]
name = "examon-post-questions"
version = "1.0.0"
description = "Examon Post Questions Lambda Handler"
authors = ["Jarrod Folino <jdfolino@icloud.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">3.10.11,<3.12"
aws-lambda-powertools = { extras = ["aws-sdk"], version = "^2.25.1" }
examon_mongo = {path = "../../libs/examon_mongo/dist/examon_mongo-0.1.0.tar.gz", develop = true}
aws-xray-sdk = "^2.12.0"
examon-core = "1.4.2"
examon-pcep-package = "0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ingest = 'src.main:run'